--- a/src/user.html
+++ b/src/user.html
@@ -10,7 +10,7 @@
         <link rel='stylesheet' href='assets/css/app.css?ver=2.0' type="text/css">
 
         <!-- <script src='/socket.io/socket.io.js'></script> -->
-        <script src='https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.4.0/socket.io.js'></script>
+        <script src='assets/js/socket.io.js'></script> 
         <script type="module" src='assets/user/rtc.js'></script>
         <script type="module" src='assets/user/events.js'></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/webrtc-adapter/7.3.0/adapter.min.js" integrity="sha256-2qQheewaqnZlXJ3RJRghVUwD/3fD9HNqxh4C+zvgmF4=" crossorigin="anonymous"></script>
