--- a/src/index.html
+++ b/src/index.html
@@ -74,7 +74,7 @@
 
         <div class="container-fluid" id='room-create' hidden>
             <div class="row">
-                <div class="col-12 h2 mt-5 text-center">Create Room</div>
+                <div class="col-12 h2 mt-5 text-center">Create Sala de Transmisión</div>
             </div>
             
             <div class="row mt-2">
@@ -83,17 +83,12 @@
                 </div>
 
                 <div class="col-12 col-md-4 offset-md-4 mb-3">
-                    <label for="room-name">Room Name</label>
-                    <input type="text" id='room-name' class="form-control rounded-0" placeholder="Room Name">
+                    <label for="your-name">Nombre</label>
+                    <input type="text" id='your-name' class="form-control rounded-0" placeholder="Nombre">
                 </div>
 
                 <div class="col-12 col-md-4 offset-md-4 mb-3">
-                    <label for="your-name">Your Name</label>
-                    <input type="text" id='your-name' class="form-control rounded-0" placeholder="Your Name">
-                </div>
-
-                <div class="col-12 col-md-4 offset-md-4 mb-3">
-                    <button id='create-room' class="btn btn-block rounded-0 btn-info">Create Room</button>
+                    <button id='create-room' class="btn btn-block rounded-0 btn-info">Create Sala</button>
                 </div>
 
                 <div class="col-12 col-md-4 offset-md-4 mb-3" id='room-created'></div>
