trying fix to safari and iphone

--- a/src/user.html
+++ b/src/user.html
@@ -13,7 +13,8 @@
         <script src='assets/js/socket.io.js'></script> 
         <script type="module" src='assets/user/rtc.js'></script>
         <script type="module" src='assets/user/events.js'></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/webrtc-adapter/7.3.0/adapter.min.js" integrity="sha256-2qQheewaqnZlXJ3RJRghVUwD/3fD9HNqxh4C+zvgmF4=" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/webrtc-adapter/8.1.0/adapter.min.js" integrity="sha512-w7RWyKh35UnZe3T7sp8+JLBQWKz4QzOLfQbfNo005DlSSGBhpBPmf5ywPwMyyyB9Qbb/0YZsyqFQFdbUyew6vg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+       <!--  <script src="https://cdnjs.cloudflare.com/ajax/libs/webrtc-adapter/7.3.0/adapter.min.js" integrity="sha256-2qQheewaqnZlXJ3RJRghVUwD/3fD9HNqxh4C+zvgmF4=" crossorigin="anonymous"></script> -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
         <script src='https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/1.3.8/FileSaver.min.js'></script>
         <script src='https://cdn.rawgit.com/yahoo/xss-filters/master/dist/xss-filters.js'></script>
