fixing stlying issues

--- a/src/user.html
+++ b/src/user.html
@@ -18,12 +18,12 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
         <script src='https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/1.3.8/FileSaver.min.js'></script>
         <script src='https://cdn.rawgit.com/yahoo/xss-filters/master/dist/xss-filters.js'></script>
-        <script src='assets/user/autolink.js'></script>
+        <script src='assets/js/autolink.js'></script>
     </head>
 
     <body>
         
-        <nav class="navbar fixed-top bg-info rounded-0 d-print-none">
+        <nav class="navbar fixed-top bg-primary rounded-0 d-print-none">
             <div class="text-white">Camara en Vivo Magistral de Rio Grande</div>
 
             <div class="pull-right room-comm" hidden>
