--- a/src/index.html
+++ b/src/index.html
@@ -59,7 +59,11 @@
     </div>
 
     <nav class="navbar fixed-top bg-primary rounded-0 d-print-none">
-      <div class="text-white">Ajedrez Latino (Hosting)</div>
+      <div>
+        <span class="text-white">Ajedrez Latino (Hosting) </span>
+        <span><i class="fa fa-user text-white"></i></span>
+        <span class="text-white"><b id="numberOfConnected">1</b></span>
+      </div>
 
       <div class="pull-right room-comm" hidden>
         <button
