--- a/src/user.html
+++ b/src/user.html
@@ -38,7 +38,11 @@
 
   <body>
     <nav class="navbar fixed-top bg-primary rounded-0 d-print-none">
-      <div class="text-white">Magistral de Rio Grande</div>
+      <div>
+        <span class="text-white">Magistral de Rio Grande </span>
+        <span><i class="fa fa-user text-white"></i></span>
+        <span class="text-white"><b id="numberOfConnected">1</b></span>
+      </div>
 
       <div class="pull-right room-comm" hidden>
         <button
