--- a/src/user.html
+++ b/src/user.html
@@ -21,6 +21,7 @@
 
     <!-- <script src='/socket.io/socket.io.js'></script> -->
     <script src="assets/js/socket.io.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script type="module" src="assets/user/rtc.js"></script>
     <script type="module" src="assets/user/events.js"></script>
     <script
