adding a spinner when the video is loading

--- a/src/index.html
+++ b/src/index.html
@@ -107,7 +107,7 @@
 
         <button
           class="btn btn-sm text-white pull-right btn-no-effect"
-          id="toggle-chat-pane"
+          id="toggle-chat-panel"
         >
           <i class="fa fa-2x fa-comment"></i>
           <span
@@ -206,7 +206,7 @@
 
         <div
           class="col-md-3 chat-col d-print-none mb-2 bg-primary"
-          id="chat-pane"
+          id="chat-panel"
           hidden
         >
           <section class="msger">
