--- a/src/user.html
+++ b/src/user.html
@@ -48,7 +48,7 @@
       <div class="pull-right room-comm" hidden>
         <button
           class="btn btn-sm text-white pull-right btn-no-effect"
-          id="toggle-chat-pane"
+          id="toggle-chat-panel"
         >
           <i class="fa fa-2x fa-comment"></i>
           <span
@@ -95,12 +95,22 @@
     <div class="container-fluid room-comm" hidden>
       <div class="row">
         <div class="col-md-12 main" id="main-section">
-          <div class="row" id="videos"></div>
+          <div class="row" id="videos">
+          </div>
+          <div class="row">
+            <div class="d-flex justify-content-center">
+              <div
+                class="spinner-border"
+                style="position: fixed; left: 50%; bottom: 50%;"
+                role="status"
+              ></div>
+            </div>
+          </div>
         </div>
 
         <div
           class="col-md-3 chat-col d-print-none mb-2 bg-primary"
-          id="chat-pane"
+          id="chat-panel"
           hidden
         >
           <section class="msger">
