--- a/src/index.html
+++ b/src/index.html
@@ -144,6 +144,13 @@
             class="form-control rounded-0"
             placeholder="Nombre"
           />
+          <label for="password">Contraseña</label>
+          <input
+            type="password"
+            id="your-password"
+            class="form-control rounded-0"
+            placeholder="Contraseña"
+          />
         </div>
 
         <div class="col-12 col-md-4 offset-md-4 mb-3">
@@ -175,6 +182,13 @@
             id="username"
             class="form-control rounded-0"
             placeholder="Nombre"
+          />
+          <label for="password">Contraseña</label>
+          <input
+            type="password"
+            id="password"
+            class="form-control rounded-0"
+            placeholder="Contraseña"
           />
         </div>
 
