--- a/src/index.html
+++ b/src/index.html
@@ -119,9 +119,9 @@
         </button>
 
         <button class="btn btn-sm rounded-0 btn-no-effect text-white">
-          <a href="/" class="text-white text-decoration-none"
+          <span id="exit" class="text-white text-decoration-none"
             ><i class="fa fa-2x fa-sign-out-alt text-white" title="Salir"></i
-          ></a>
+          ></span>
         </button>
       </div>
     </nav>
