--- a/src/user.html
+++ b/src/user.html
@@ -98,7 +98,7 @@
           <div class="row" id="videos">
           </div>
           <div class="row">
-            <div class="d-flex justify-content-center">
+            <div id="spinner-container" class="d-flex justify-content-center">
               <div
                 class="spinner-border"
                 style="position: fixed; left: 50%; bottom: 50%;"
